--- a/basic-spring/src/main/resources/application.properties
+++ b/basic-spring/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.application.name=product-order-service
-spring.datasource.url=jdbc:mysql://localhost:3306/dbOrder?serverTimezone=Asia/Seoul
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dborder?serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.devtools.restart.enabled = true
+spring.devtools.livereload.enabled = true
+
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=8080
