--- a/marketCurlyCopy-bakcend/src/main/resources/application.properties
+++ b/marketCurlyCopy-bakcend/src/main/resources/application.properties
@@ -8,5 +8,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
 
 spring.jpa.properties.hibernate.format_sql=true
