--- a/marketCurlyCopy-bakcend/src/main/resources/application.properties
+++ b/marketCurlyCopy-bakcend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=${dbUrl}
 spring.datasource.username=${dbUserName}
 spring.datasource.password=${dbPassword}
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
