--- a/marketCurlyCopy-bakcend/src/main/resources/application.properties
+++ b/marketCurlyCopy-bakcend/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.jpa.generate-ddl=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 
+
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
